# zorya-volos

./: $  .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  REUSE.toml  docker-compose.yml  execution_log.txt  fuzzer_config.json  jump_tables.json  repo_init.sh  test-binary.sh  test-run.sh  test-run_nothreads.sh
LICENSES/: Apache-2.0.txt
doc/: Compiler-Aware-Strategies.md  Fuzzer.md  Go-Binary-Analysis.md  Lightweight-Path-Analysis.md  Multi-threading.md  Overlay-Path-Analysis.md  Speculative-Execution.md  Strategies.md  Vulnerability-Detection.md
results/: execution_trace_runtime+newosthread-1.txt  function_signatures_go.json  panic_reachable.txt
scripts/: dump_memory.sh  dwarf_get_all_function_args.py  explore_ast_panic.py  extract_vdso.sh  find_os_args.py  find_panic_xrefs.py  generate_vdso_pcode.sh  get_function_arg.sh  get_jump_tables.py  ghidra_get_all_function_args.py  llvm_extract_function_signatures.py  precompute_panic_reach.py  test_vdso_integration.sh  zorya
scripts/get-funct-arg-types/: extract_runtime_g.go  go.mod  main  main.go  main.license
scripts/scripts_dump_registers_memory/: dump_threads.py  execute_commands.py  parse_and_generate.py
src/: .main.rs.swp  lib.rs  main.rs  target_info.rs
src/concolic/: concolic_enum.rs  concolic_var.rs  concrete_var.rs  executor.rs  executor_bool.rs  executor_callother.rs  executor_float.rs  (+5 more)
tests/: tests_executor.rs  tests_executor_bool.rs  tests_executor_callother.txt  tests_executor_callother_syscalls.rs  tests_executor_float.rs  tests_executor_int.rs
(+74 files in other folders)
